Bug 268308 - [WGSL] Crash when failing to type check addressSpace and similar enums
Summary: [WGSL] Crash when failing to type check addressSpace and similar enums
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tadeu Zagallo
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-01-29 09:49 PST by Tadeu Zagallo
Modified: 2024-01-30 06:47 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tadeu Zagallo 2024-01-29 09:49:39 PST
...
Comment 1 Tadeu Zagallo 2024-01-29 09:49:57 PST
<rdar://problem/121527219>
Comment 2 Tadeu Zagallo 2024-01-29 09:56:23 PST
Pull request: https://github.com/WebKit/WebKit/pull/23435
Comment 3 EWS 2024-01-30 06:47:32 PST
Committed 273749@main (7dc1af69d5f2): <https://commits.webkit.org/273749@main>

Reviewed commits have been landed. Closing PR #23435 and removing active labels.